--- a/src/app/admin/pages/mercados/puesto-mercado/puesto-mercado.component.html
+++ b/src/app/admin/pages/mercados/puesto-mercado/puesto-mercado.component.html
@@ -14,23 +14,25 @@
 </div>
 
 
-<table datatable [dtOptions]="this.dtOptions" class="row-border hover" id="myTablePuesto">
-    <thead>
-        <tr>
-            <th>#</th>
-            <!-- <th>Identificador</th> -->
-            <th>Nro. puesto</th>
-            <!-- <th>Sector</th> -->
-            <th>Titular</th>
-            <!-- <th>Precio mensual</th> -->
-            <th>Fecha ingreso</th>
-            <th>Nro. contrato</th>
-            <!-- <th>observaciones</th> -->
-            <th>Estado</th>
-            <th>Acciones</th>
-        </tr>
-    </thead>
-    <tbody>
-        <!-- Aqui la logica de la tabla de datos -->
-    </tbody>
-</table>
+<div class="table-responsive">
+    <table datatable [dtOptions]="this.dtOptions" class="row-border hover" id="myTablePuesto">
+        <thead>
+            <tr>
+                <th>#</th>
+                <!-- <th>Identificador</th> -->
+                <th>Nro. puesto</th>
+                <!-- <th>Sector</th> -->
+                <th>Titular</th>
+                <!-- <th>Precio mensual</th> -->
+                <th>Fecha ingreso</th>
+                <th>Nro. contrato</th>
+                <!-- <th>observaciones</th> -->
+                <th>Estado</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Aqui la logica de la tabla de datos -->
+        </tbody>
+    </table>
+</div>
