--- a/src/app/admin/pages/mercados/sector-mercado/sector-mercado.component.html
+++ b/src/app/admin/pages/mercados/sector-mercado/sector-mercado.component.html
@@ -13,19 +13,21 @@
 
 </div>
 
-<table datatable [dtOptions]="this.dtOptions" class="row-border hover" id="myTableSector">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Identificador</th>
-      <th>Mercado</th>
-      <th>Sector</th>
-      <th>Descripción</th>
-      <th>Estado</th>
-      <th>Acciones</th>
-    </tr>
-  </thead>
-  <tbody>
-    <!-- Aqui la logica de la tabla de datos -->
-  </tbody>
-</table>
+<div class="table-responsive">
+  <table datatable [dtOptions]="this.dtOptions" class="row-border hover" id="myTableSector">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Identificador</th>
+        <th>Mercado</th>
+        <th>Sector</th>
+        <th>Descripción</th>
+        <th>Estado</th>
+        <th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Aqui la logica de la tabla de datos -->
+    </tbody>
+  </table>
+</div>
