--- a/src/app/web/shared/footer/footer.component.html
+++ b/src/app/web/shared/footer/footer.component.html
@@ -27,11 +27,11 @@
 
     </div>
 
-    <div class="col-12  col-lg-4 ">
+    <div class="col-12  col-lg-4 text-center">
       <img class="footer__logo" src="../../../../assets/img/logoclizasun-5.png" alt="">
     </div>
-
-    <p class="col-12 text-white text-uppercase mb-4 text-center mb-0">copyright © Todos los derechos reservados Gobierno
+    <hr>
+    <p class="col-12 text-white text-uppercase text-center mb-0">copyright © Todos los derechos reservados Gobierno
       Autónomo
       Municipal de
       Cliza {{this.anio}}</p>
