--- a/src/app/admin/pages/mercados/cobrar/cobrar.component.html
+++ b/src/app/admin/pages/mercados/cobrar/cobrar.component.html
@@ -7,39 +7,92 @@
 </div>
 
 <div class="row justify-content-center mb-4 mt-3">
-    <div class="col-12 col-md-6 border rounded p-4">
-        <div class="form-group">
-            <label for="search" class="font-weight-bold">Buscar Por Nro. Carnet ó Nro. de Puesto</label>
+    <div class="col-12 d-flex" style="gap: 20px;">
+
+        <div class="form-group border rounded p-4" style="width: 600px;">
+            <label for="search" class="font-weight-bold">Buscar Por Nro. de Carnet</label>
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="Ingrese el nro. de carnet ó puesto del titular"
-                    [(ngModel)]="this.puestoCarnet">
+                <input type="text" class="form-control" placeholder="Ingrese el nro. de carnet del titular"
+                    [(ngModel)]="this.reciboCarnet">
             </div>
-            <div class="mt-3 float-right">
-                <button class="btn btn-info text-uppercase" (click)="this.buscarRecibos();"><i
-                        class="fas fa-search"></i> Buscar Titular</button>
-                <button class="btn btn-danger text-uppercase ml-1">Cancelar</button>
+            <div class="mt-3 float-left">
+                <button class="btn btn-info text-uppercase" (click)="this.buscarRecibosCarnet();"><i
+                        class="fa fa-search"></i> Buscar</button>
+                <button class="btn btn-danger text-uppercase ml-1" (click)="this.borrarCarnet();">Cancelar</button>
             </div>
         </div>
+
+        <div class="form-group border rounded p-4" style="width: 600px;">
+            <label for="search" class="font-weight-bold">Buscar Por Nro. de Puesto</label>
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Ingrese el nro. puesto del titular"
+                    [(ngModel)]="this.reciboPuesto">
+            </div>
+            <div class="mt-3 float-left">
+                <button class="btn btn-info text-uppercase" (click)="this.buscarRecibosPuesto();"><i
+                        class="fa fa-search"></i> Buscar</button>
+                <button class="btn btn-danger text-uppercase ml-1" (click)="borrarPuesto();">Cancelar</button>
+            </div>
+        </div>
+
     </div>
 </div>
-
+<hr>
 <h5 class="text-uppercase text-info mt-3">Lista de recibos pendientes de pago</h5>
 
 <div class="table-responsive m-t-40 animated fadeIn fast">
-    <table datatable [dtOptions]="this.dtOptions" class="row-border hover" id="myTableTitulars">
+    <table class="table row-border hover" id="myTableCobros">
         <thead>
             <tr>
                 <th>#</th>
                 <th>Carnet</th>
-                <th>Nombres</th>
-                <th>Puesto</th>
+                <th style="width: 20%;">Nombres</th>
+                <th style="width: 20%;">Nro. de Puesto</th>
                 <th>Periodo</th>
                 <th>Deuda</th>
                 <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
+
             <!-- Aqui la logica de la tabla de datos -->
+
+            <tr *ngFor="let cobro of this.listRecibos; index as i">
+                <td>{{i+1}}</td>
+                <td>{{cobro.puesto.titular.carnet}}</td>
+                <td>{{cobro.puesto.titular.nombres}} {{ cobro.puesto.titular.apellidos }}</td>
+                <td>{{cobro.puesto.nro_puesto}}</td>
+                <td>{{cobro.detalle_factura[0].periodo}}</td>
+                <td>{{cobro.puesto.precio_mensual}} Bs.</td>
+                <td>
+
+                    <div class="form-group row">
+                        <div class="col-sm-10 offset-sm-2">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="gridCheck1"
+                                    [(ngModel)]="cobro.selected"> <!-- Checkbox para seleccionar -->
+                                <label class="form-check-label" for="gridCheck1">
+                                    Cobrar
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+
+                </td>
+                <!-- <td>
+                    <button class="btn btn-info"><i class="fa fa-edit"></i> Cobrar</button>
+                </td> -->
+            </tr>
+            <tr>
+                <td colspan="7">
+                    <div class="text-right mr-5 mt-3">
+                        <button class="btn btn-info text-uppercase" (click)="this.cobrarRecibos();"><i
+                                class="fa fa-credit-card"></i> Cobrar</button>
+                    </div>
+                </td>
+            </tr>
+
+
         </tbody>
     </table>
 </div>
