--- a/src/app/admin/pages/mercados/puesto-mercado/puesto-mercado.component.html
+++ b/src/app/admin/pages/mercados/puesto-mercado/puesto-mercado.component.html
@@ -21,7 +21,7 @@
                 <th>#</th>
                 <!-- <th>Identificador</th> -->
                 <th>Nro. puesto</th>
-                <!-- <th>Sector</th> -->
+                <th>Sector</th>
                 <th>Titular</th>
                 <!-- <th>Precio mensual</th> -->
                 <th>Fecha ingreso</th>
