--- a/src/app/web/components/noticias/noticias.component.css
+++ b/src/app/web/components/noticias/noticias.component.css
@@ -24,6 +24,7 @@
   margin-bottom: 2rem;
   transition: transform 0.3s;
   border-radius: 15px;
+  border: 5px solid #f8f9fa;
   background-color: #f8f9fa;
 }
 
@@ -35,8 +36,11 @@
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
   border-radius: 15px;
-  height: 200px;
+  height: 250px;
   object-fit: cover;
+  object-position: top;
+  /* Alinea la imagen en la parte superior */
+
 }
 
 .card-body {
@@ -64,3 +68,13 @@
 
 
 /* FIN Estilos personalizados para la sección de noticias */
+.circulos__icons {
+  font-weight: bold;
+}
+
+.bg-celeste {
+  background-color: #00aeff;
+  border-radius: 10px;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(0, 174, 255, 1) 0%, rgba(109, 208, 254, 1) 100%);
+}
