--- a/src/app/web/shared/header/header.component.html
+++ b/src/app/web/shared/header/header.component.html
@@ -1,29 +1,13 @@
 <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
+
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators2" data-slide-to="1" class=""></li>
     <li data-target="#carouselExampleIndicators2" data-slide-to="2" class=""></li>
   </ol>
   <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active carrusel">
-      <img src="../../../../assets/img/alcaldia2024.jpg" class="d-block w-100 img-carrusel" alt="...">
-      <div class="mensaje">
-        <h1 class="animated fadeInLeftBig mensaje__titulo text-uppercase">Lorem ipsum dolor sit amet consectetur
-          adipisicing.</h1>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="../../../../assets/img/alcaldia.jpg" class="d-block w-100 img-carrusel" alt="...">
-      <div class="mensaje">
-        <h1 class="animated fadeInLeftBig mensaje__titulo text-uppercase">Lorem ipsum dolor sit amet consectetur
-          adipisicing elit.</h1>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="../../../../assets/img/7.jpg" class="d-block w-100 img-carrusel" alt="...">
-      <div class="mensaje">
-        <h1 class="animated fadeInLeftBig mensaje__titulo text-uppercase">Cliza Corazón del valle alto</h1>
-      </div>
+    <div *ngFor="let item of listBanners; let i = index" class="carousel-item" [class.active]="i === 0">
+      <img [src]="item.bgImage" class="d-block w-100 img-carrusel" [alt]="item.texto">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
